@@ -202,4 +202,4 @@ T_353ac3_from_ts_with_missing_tcs_with_non_zero_first_tc:cd895e8b406108f0568ed44
 T_354h264_60000_1001i_def_duration_60000_1000:3588de4a68a60301c05c0e96ec1499e8:passed:20120314-090846:0.236021657
 T_355chapters:aff1c812e628ee6c1dc11f8b48d8b472-fe1f0f4bc6fea73176105ec2ed297fd5-89bf21b148f8bd2cb0d36a975ec1ce31-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok:passed:20120324-121601:0.218524938
 T_356tags:50b0db97dc1c571a2ae5688614cb0a39-44bd89109f3414e90b84b58b73536133-2718d3a6e7d380df11d0bcdf176cfacf-52b632167e9dadb0779f239bf0c4b82a-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok-ok:passed:20120324-121752:0.210298216
-T_357segment_info:2d71cf1bd5f76518c50cd264c9bbca02-2d71cf1bd5f76518c50cd264c9bbca02-ok-ok-ok-ok-ok-ok-ok:passed:20120324-122844:0.171732152
+T_357segment_info:2d71cf1bd5f76518c50cd264c9bbca02-14d5941c82657b7b39cb9c1f93bf39b4-ok-ok-ok-ok-ok-ok-ok:passed:20120324-122844:0.171732152
